# shrubbery

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  debug.sh  lint.sh  pyproject.toml  run.py  run.sh
.claude/: complete.flac  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yml  linter.sh
src/shrubbery/: adapter.py  adversarial_validation.py  caching.py  captor.py  collect_evaluation_tables.py  constants.py  cross_validation.py  cuml.py  ensemble.py  evaluation.py  example.py  main.py  main.yaml  meta_estimator.py  metrics.py  mixer.py  napi.py  neutralization.py  observability.py  pairwise.py  portioned.py  tournament.py  utilities.py  validation.py  workspace.py
src/shrubbery/data/: augmentation.py  basics.py  columns.py  downsampling.py  ingest.py
src/shrubbery/embeddings/: autoencoder.py  autoencoder_old.py  constrained_gan.py  diagnostics.py  gan.py  gan_old.py  simple.py  som.py  tsne.py  unconstrained_gan.py
src/shrubbery/universe/: autokeras.py  cnn.py  factorization_machines.py  fnn.py  fnn_old.py  kan.py  neural_network.py  resnet.py  resnet_old.py  spiking.py  tpot.py  wide_and_deep.py  wide_and_deep_old.py  xgboost.py
