[project]
name = "shrubbery"
description = "shrubbery"
version = "0.0.0"
authors = [
    { name = "altermarkive", email = "altermarkive@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GNU General Public License v3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "catboost>=1.2.10",
    "cudf-cu13>=25.10.0",
    "cuml-cu13>=25.10.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    # File "/usr/local/lib/python3.13/dist-packages/myfm/__init__.py", line 8, in <module>
    #     from ._myfm import RelationBlock
    # ModuleNotFoundError: No module named 'myfm._myfm'
    "myfm==0.3.2.0",
    "numerapi>=2.20.7",
    "numpy>=2.4.4",
    "nvidia-modelopt>=0.43.0",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sklearn-genetic>=0.6.0",
    "sklearn-genetic-opt>=0.12.0",
    "torch>=2.8.0",
    "torch-tensorrt>=2.11.0",
    "tpot>=1.1.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
    "xgboost>=3.2.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
