[project]
name = "shrubbery"
description = "shrubbery"
version = "0.0.0"
authors = [
    { name = "marek-burza", email = "marek-burza@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "catboost>=1.2.10",
    "cudf-cu13>=25.10.0",
    "cuml-cu13>=25.10.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    # File "/usr/local/lib/python3.13/dist-packages/myfm/__init__.py", line 8, in <module>
    #     from ._myfm import RelationBlock
    # ModuleNotFoundError: No module named 'myfm._myfm'
    "myfm==0.3.2.0",
    "numerai-tools>=0.5.3",
    "numerapi>=2.23.3",
    "numexpr>=2.14.1",
    "numpy>=2.4.4",
    "nvidia-modelopt>=0.45.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sklearn-genetic-opt>=0.13.3",
    "torch>=2.8.0",
    "torch-tensorrt>=2.11.0",
    "tpot>=1.1.0",
    "tqdm>=4.68.4",
    "wandb>=0.27.1",
    "xgboost>=3.2.0",
]

[build-system]
requires = [ "uv_build>=0.11.28,<0.12" ]
build-backend = "uv_build"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
