[project]
name = "shrubbery"
description = "shrubbery"
version = "0.0.0"
authors = [
    { name = "marek-burza", email = "marek-burza@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "catboost>=1.2.10",
    "cudf-cu13>=25.10.0",
    "cuml-cu13>=25.10.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numerai-tools>=0.5.3",
    "numerapi>=2.23.3",
    "numexpr>=2.14.1",
    "numpy>=2.4.4",
    "nvidia-modelopt>=0.45.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sklearn-genetic-opt>=0.13.3",
    "torch>=2.8.0",
    "tqdm>=4.68.4",
    "wandb>=0.27.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.12.1", # Extension of Python debugger
    "wat>=0.7.0", # Deep inspection of Python objects
]

[build-system]
requires = [ "uv_build>=0.11.28,<0.12" ]
build-backend = "uv_build"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132" },
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
